[WIP] Create users and groups.

--- a/inventories/test00.ini
+++ b/inventories/test00.ini
@@ -1,2 +1,2 @@
 [local]
-test01 ansible_host=192.168.50.10 ansible_become=true ansible_user=vagrant ansible_password=vagrant
+test01 ansible_host=192.168.50.10 ansible_user=vagrant
