--- a/roles/common/tasks/install.yml
+++ b/roles/common/tasks/install.yml
@@ -1,4 +1,5 @@
 - name: Ensure install git
-  yum: name={{ item }} state=installed
+  become: true
+  apt: name={{ item }} state=installed
   with_items:
   - git
