--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,6 +3,8 @@
 # some basic default values...
 
 inventory      = inventories/
+playbook       = playbook/
+roles_path     = roles/
 #library        = /usr/share/my_modules/
 #module_utils   = /usr/share/my_module_utils/
 #remote_tmp     = ~/.ansible/tmp
@@ -18,9 +20,6 @@ inventory      = inventories/
 #module_set_locale = False
 
 
-
-# additional paths to search for roles in, colon separated
-roles_path    = roles/
 
 # uncomment this to disable SSH key host checking
 #host_key_checking = False
